feat(api): adiciona requisição e exibição de dados da API
- A função getAllPosts carrega os dados da API e exibi-os na tela de Posts.

--- a/post.html
+++ b/post.html
@@ -11,6 +11,9 @@
     <script src="./js/scripts.js" defer></script>
 </head>
 <body>
-    
+    <h1>Posts do Blog</h1>
+    <p id="loading">Carregando..</p>
+
+    <div id="posts-container"></div>
 </body>
 </html>
