--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>Posts</title>
 
     <!--CSS-->
     <link rel="stylesheet" href="./css/styles.css">
     <!--JS-->
     <script src="./js/scripts.js" defer></script>
 </head>
+
 <body>
-    
+    <h1>Posts do Blog</h1>
+    <p id="loading">Carregando..</p>
+
+    <div id="posts-container"></div>
 </body>
+
 </html>
