--- a/post.html
+++ b/post.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Posts</title>
+    <title>Blog</title>
 
     <!--CSS-->
     <link rel="stylesheet" href="./css/styles.css">
     <!--JS-->
     <script src="./js/scripts.js" defer></script>
 </head>
-<body>
-    <h1>Posts do Blog</h1>
-    <p id="loading">Carregando..</p>
 
-    <div id="posts-container"></div>
+<body>
+
 </body>
+
 </html>
