--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Posts</title>
+    <title>Blog</title>
 
     <!--CSS-->
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <!--JS-->
-    <script src="./js/scripts.js" defer></script>
+    <script src="js/scripts.js" defer></script>
 </head>
 
 <body>
